# Handwriting-Context-Aware-Note

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile-backend  README.md  config.py  logging_config.py  main.py  pyproject.toml
backend/agents/: __init__.py  graph.py  query_rewrite.py  reranker.py  retriever.py  state.py  synthesis.py
backend/api/: chat.py  documents.py
backend/models/: __init__.py  database.py  schemas.py
backend/services/: __init__.py  db.py  embedding.py  ocr.py  spatial_chunker.py  vector_store.py
frontend/: Dockerfile  Dockerfile-frontend  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/components/: ChatPanel.vue  DocumentSidebar.vue  PdfViewer.vue
frontend/src/services/: api.js  logger.js
