[project]
name = "handwriting-context-aware-note-backend"
version = "0.1.0"
description = "Spatial-Aware Note Agent backend – FastAPI + LangGraph + Qdrant"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.5.0",
    "pymupdf>=1.24.0",
    "qdrant-client>=1.11.0",
    "openai>=1.50.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "dspy>=2.5.0",
    "python-dotenv==1.0.1",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "easyocr>=1.7.2",
]
